k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-webapp-service
  namespace: default
  labels:
    app: sample-webapp
spec:
  selector:
    app: sample-webapp
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
