k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-webapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sample-app.local
    - sample-webapp.incoquinita.github.io
    secretName: sample-app-tls
  rules:
  - host: sample-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-webapp-service
            port:
              number: 80
  - host: sample-webapp.incoquinita.github.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-webapp-service
            port:
              number: 80
